# tfmicro

./: .gitmodules  Cargo.toml  build.rs
csrc/: tflite_wrapper.hpp
src/: interop.rs  lib.rs  micro_interpreter.rs  micro_op_resolver.rs  model.rs  operators.rs
src/tensor/: info.rs  mod.rs
tests/: micro_speech.rs  micro_speech_from_audio.rs  person_detection.rs
