[package]
name = "tfmicro"
version = "0.1.0"
authors = ["Richard Meadows <richard@richard.fish>", "Kevin Hill <kevin@kevinhill.nl>"]
description = "Rust bindings of TensorFlow Lite for Microcontrollers"
license = "Apache-2.0"
repository = "https://github.com/Recognition2/tfmicro"
readme = "README.md"
keywords = ["tensorflow", "microcontroller", "no_std", "embedded"]
categories = ["no-std", "embedded", "api-bindings", "computer-vision"]
edition = "2018"
build = "build/build.rs"

# include only the necessary parts of tensorflow
include = [
  "**/*.rs",
  "/*.md",
  "LICENSE-*",
  "examples/models/**",
  "csrc/**",
  "src/**",
  "!.gdb_history",              # From gitignore
  "!vgcore.*",
  "!**/*_test.cc",              # No tests
  # Downloads
  "submodules/tflite-micro/tensorflow/lite/micro/tools/make/downloads/flatbuffers/include/**",
  "submodules/tflite-micro/tensorflow/lite/micro/tools/make/downloads/gemmlowp/**/*.h",
  "submodules/tflite-micro/tensorflow/lite/micro/tools/make/downloads/ruy",
  "submodules/tflite-micro/tensorflow/lite/micro/tools/make/downloads/cmsis",
  "submodules/tflite-micro/tensorflow/lite/micro/tools/make/downloads/kissfft",
  # Micro
  "submodules/tflite-micro/tensorflow/lite/micro/*.[ch]*",
  "submodules/tflite-micro/tensorflow/lite/micro/kernels/**/*.[ch]*",
  "submodules/tflite-micro/tensorflow/lite/micro/tflite_bridge/*.[ch]*",
  "submodules/tflite-micro/tensorflow/lite/micro/memory_planner/*.[ch]*",
  "submodules/tflite-micro/tensorflow/lite/micro/testing/*.h",
  # Lite
  "submodules/tflite-micro/tensorflow/lite/*.[ch]*",
  "submodules/tflite-micro/tensorflow/lite/c/**/*.[ch]*",
  "submodules/tflite-micro/tensorflow/lite/kernels/**/*.[ch]*",
  "submodules/tflite-micro/tensorflow/lite/schema/schema_generated.h",
  "submodules/tflite-micro/tensorflow/lite/micro/memory_planner/*.cc",
  "submodules/tflite-micro/tensorflow/lite/experimental/microfrontend/lib",
  "submodules/tflite-micro/tensorflow/lite/core/api",
  # Core
  "submodules/tflite-micro/tensorflow/core/public/*.h",
]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
cpp = "0.5"
cty = "0.2"
log = { version = "0.4", default-features = false }
ordered-float = { version = "~4.2", default-features = false }

[build-dependencies]
anyhow = "1.0"
bindgen = "0.69"
cc = { version = "1.0", features = ["parallel"] }
cpp_build = "0.5.9"
fs_extra = "1.3"
glob = "0.3"

[dev-dependencies]
env_logger = "0.11"
hound = "3.5"
itertools = "0.12"

[features]
default = ["cpp-std"]
build = []
no-c-warnings = []
cmsis-nn = []
cpp-std = []

[profile.release]
debug = true # symbols are nice
